# ImageEnhancementTFG

./: .gitignore  README.md  gui.py  pyproject.toml
LICENSES/: README.md
imageenhancementtfg/: gui.py
imageenhancementtfg/data/: prompts.json
imageenhancementtfg/data/model_config/: deblur_config.yml  denoise_config.yml  lowlight_config.yml  skyreplace_config.json
imageenhancementtfg/models/: utils.py
imageenhancementtfg/models/Lens_Distortion/: lens_distortion.py  utils.py
imageenhancementtfg/models/Llama/: llama.py  utils.py
imageenhancementtfg/models/NAFNet/: deblur.py  denoise.py
imageenhancementtfg/models/SkyAR/: README.md  sky_replace.py  utils.py
imageenhancementtfg/models/White_Balance/: white_balance.py
imageenhancementtfg/models/denoise_deblur/: deblur.py  denoise.py
imageenhancementtfg/models/lens_distortion/: lens_distortion.py
imageenhancementtfg/models/llama/: llama.py  utils.py
imageenhancementtfg/models/sky_replace/: networks.py  sky_replace.py  skybox_utils.py  skyboxengine.py
imageenhancementtfg/models/white_balance/: white_balance.py
imageenhancementtfg/src/: aux_functions.py  utils.py
imageenhancementtfg/src/objects/: model.py  model_manager.py
models/Deep_White_Balance/PyTorch/: white_balance.py
models/Llama/: llama.py
models/NAFNet/: deblur.py  denoise.py
models/SkyAR/: networks.py  sky_replace.py  skybox_utils.py  skyboxengine.py  skymagic.py
models/White_Balance/: white_balance.py
src/: aux_functions.py  enhancement.py  gui.py  model_manager.py
src/objects/: model.py  model_manager.py
(+88 files in other folders)
